<resources>
    <string name="app_name">College_Space</string>
    <string name="website">Website</string>
    <string name="developer">Developer</string>
    <string name="youtube">Youtube</string>
    <string name="login">Login</string>
    <string name="location">Location</string>
    <string name="start">start</string>
    <string name="close">Close</string>
    <string name="student_login">Student Login</string>
    <string name="other_logins">Other Logins</string>
    <string name="home">Home</string>
    <string name="neewsfeed">NeewsFeed</string>
    <string name="faculty">Faculty</string>
    <string name="gallary">Gallery</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_and_annocements">News and Announcements</string>
    <string name="complaints_grievance">Complaints/Grievance</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="timetable">Timetable</string>
    <string name="notes">Notes</string>
    <string name="opportunities">Opportunities</string>
    <string name="other_options">Other Options</string>
    <string name="changed_password">Changed Password</string>
    <string name="create_department">Create Department</string>
    <string name="enter_course_total_semesters">Enter Course Total Semesters</string>
    <string name="enter_department_cource_name">Enter Department / Cource name</string>
    <string name="select_date">Select Date</string>
    <string name="end_date_of_the_academic">End Date of the academic</string>
    <string name="starting_date_of_the_academic">Starting Date of the academic</string>
    <string name="create">Create</string>
    <string name="create_semester">Create Semester</string>
    <string name="select_deparment_cource_name">Select Deparment / Cource Name</string>
    <string name="show">show</string>
    <string name="managed_semester_details">Managed Semester Details</string>
    <string name="add_sem">Add Sem</string>
    <string name="end_date">End date</string>
    <string name="select_semester_start_date">Select Semester Start Date</string>
    <string name="select_semester_end_date">Select Semester End Date</string>
    <string name="enter_semester_number_i_e_1_2_3_etc">Enter Semester Number i.e 1,2,3 etc</string>
    <string name="select_department_course">Select Department / Course</string>
    <string name="select_semester">Select Semester</string>
    <string name="next">Next</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="save_and_add_another">Save and Add Another</string>
    <string name="select_teacher_for_this_subject">Select Teacher for this subject</string>
    <string name="confirmed_and_saved_data_into_database">Confirmed And Saved data into database</string>
    <string name="select_department_and_semester">Select Department and Semester</string>
    <string name="add_subjects">Add Subjects</string>
    <string name="you_have_selected">You have Selected</string>
    <string name="add_subject_details">Add Subject Details</string>

</resources>