<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomHomeMIWithoutL"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/bottomHomeNewsFeedMIWithoutL"
        android:title="@string/neewsfeed"
        android:icon="@drawable/ic_newsfeed"/>
    <item
        android:id="@+id/bottomHomeFacultyMIWithoutL"
        android:title="@string/faculty"
        android:icon="@drawable/ic_faculty"/>

    <item
        android:id="@+id/bottomHomeGallaryMIWithoutL"
        android:icon="@drawable/ic_gallary"
        android:title="@string/gallary"/>

    <item
        android:id="@+id/bottomHomeAboutMIWithoutL"
        android:icon="@drawable/about"
        android:title="@string/about"/>


</menu>