<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="Department/ cource">
            <menu>

                <item
                    android:id="@+id/createDeptMI"

                    android:title="@string/create" />

                <item
                    android:title="@string/show" />
            </menu>
        </item>
    </group>

    <group

        android:checkableBehavior="single">
        <item android:title="@string/managed_semester_details">
            <menu>

                <item
                    android:id="@+id/semDetailsMI"

                    android:title="@string/add_sem" />

                <item
                    android:id="@+id/addSubjectsMI"

                    android:title="@string/add_subjects" />

            </menu>
        </item>
    </group>
</menu>