<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".administration.Fragment_Semester_Details">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:padding="5dp"
      android:orientation="vertical">


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:text="@string/create_semester"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/select_department_course"
        android:textColor="@color/black"
        android:textSize="18sp" />
<include

  layout="@layout/common_spinner_layout"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/enter_semester_number_i_e_1_2_3_etc"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/createdSemNumET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="LabelFor"
        />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:padding="10dp"
          android:text="@string/select_semester_start_date"
          android:textColor="@color/black"
          android:textSize="18sp" />

      <TextView
        android:id="@+id/semStartDateTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="@string/select_date"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="18sp"
          app:drawableStartCompat="@drawable/ic_baseline_calendar_today_30"
       />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:text="@string/select_semester_end_date"
        android:textColor="@color/black"
        android:textSize="18sp" />

      <TextView
          android:id="@+id/semEndDateTV"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edittext_bottom_line"
          android:drawablePadding="10dp"
          android:padding="10dp"
          android:hint="@string/end_date"
          android:textColorHint="@color/black"

          android:textColor="@color/black"
          android:textSize="18sp"
          app:drawableStartCompat="@drawable/ic_baseline_calendar_today_30"/>

      <Button
        android:id="@+id/createSemBtn"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_bg"
        android:padding="5dp"
        android:text="@string/create"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
  </LinearLayout>

</FrameLayout>