<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".administration.Fragment_Create_Dept">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="10dp"
            android:text="@string/create_department"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/enter_department_cource_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/deptCourseNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"

            android:textSize="18sp"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="Enter Abbreviation of course"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/abbrET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:hint="Enter Short form"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/enter_course_total_semesters"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/totalSemET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="Syllabus pattern"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:ignore="LabelFor" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/starting_date_of_the_academic"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/startingDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/ic_baseline_calendar_today_30" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:text="@string/end_date_of_the_academic"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/endingDateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_line"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/select_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_baseline_calendar_today_30" />
        <Button
            android:id="@+id/createDeptBtn"
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_bg"
            android:padding="5dp"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>


</FrameLayout>