<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".administration.Fragment_Add_Subjects">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/add_subject_details"
            android:textAlignment="center"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            android:textStyle="bold" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/selectedDataLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/edit_text_bg"
                    android:orientation="vertical"

                    >

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/you_have_selected"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:padding="5dp"
                        android:text="Selected Department : "
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/selectedDepNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"

                        android:padding="5dp"
                        android:textColor="@color/Hunter_Green"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="Selected Semester"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView

                        android:id="@+id/selectedSemNameTV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"

                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        android:textColor="@color/Hunter_Green"
                        android:textSize="18sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">
                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TableLayout
                            android:id="@+id/subject_table"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/tab_layout_border" />
                    </HorizontalScrollView>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/subjectDetailsLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_bg"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="Subject Details Section : "

                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:padding="10dp"
                        android:text="@string/enter_subject_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/subjectNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_line"
                        android:hint="Subject Name "
                        android:importantForAutofill="no"

                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="18sp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:padding="10dp"
                        android:text="Enter Abbreviation of course"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/subjectAbbrET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_bottom_line"
                        android:hint="Enter Short form"
                        android:inputType="text"
                        android:padding="15dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:text="@string/select_teacher_for_this_subject"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <include

                        android:id="@+id/selectTeacherInclude"
                        layout="@layout/common_spinner_layout" />

                    <Button
                        android:id="@+id/saveAddAnotherBtn"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_bg"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/save_and_add_another"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Button
android:id="@+id/addSubjectsDataBtn"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="15dp"
                        android:background="@drawable/button_bg"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/confirmed_and_saved_data_into_database"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <Button
                    android:id="@+id/selectDeptSemBtn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/button_bg"
                    android:padding="5dp"
                    android:text="@string/select_department_and_semester"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>


    </LinearLayout>


</FrameLayout>